--- a/web/apps/synapse/src/pages/Organization/Models/@components/EmptyList.scss
+++ b/web/apps/synapse/src/pages/Organization/Models/@components/EmptyList.scss
@@ -5,7 +5,8 @@
   align-items: center;
   justify-content: center;
   background: #000000;
-  font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, monospace;
+  font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas,
+    monospace;
 
   &__content {
     display: flex;
@@ -22,7 +23,7 @@
 
     /* Corner decorations */
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: -1px;
       left: -1px;
@@ -34,7 +35,7 @@
     }
 
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       bottom: -1px;
       right: -1px;
@@ -62,10 +63,6 @@
       height: 28px;
       color: #6b7280;
     }
-  }
-
-  &__heidi {
-    display: none;
   }
 
   &__step {
@@ -105,7 +102,8 @@
     padding: 14px 32px;
     border-radius: 6px;
     transition: all 200ms ease;
-    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, monospace;
+    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas,
+      monospace;
 
     &:hover {
       background: #7c3aed !important;
