--- a/web/apps/synapse/src/pages/Projects/Projects.scss
+++ b/web/apps/synapse/src/pages/Projects/Projects.scss
@@ -1,7 +1,8 @@
 .projects-page {
   min-height: calc(100vh - var(--header-height));
   background: #000000;
-  font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, monospace;
+  font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas,
+    monospace;
 
   &__loading {
     width: 100%;
@@ -74,7 +75,8 @@
   min-height: calc(100vh - var(--header-height));
   background: #000000;
   padding: 60px 40px;
-  font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, monospace;
+  font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas,
+    monospace;
 
   &__icon {
     width: 80px;
@@ -90,7 +92,7 @@
     position: relative;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: -1px;
       left: -1px;
@@ -101,7 +103,7 @@
     }
 
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       bottom: -1px;
       right: -1px;
@@ -123,11 +125,8 @@
     color: #6b7280;
     letter-spacing: 0.1em;
     margin-bottom: 16px;
-    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, monospace;
-  }
-
-  &__heidi {
-    display: none;
+    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas,
+      monospace;
   }
 
   &__header {
@@ -159,7 +158,8 @@
     text-transform: uppercase;
     cursor: pointer;
     transition: all 200ms ease;
-    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, monospace;
+    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas,
+      monospace;
 
     &:hover {
       background: #7c3aed;
@@ -183,7 +183,7 @@
 
   /* Corner decorations */
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     top: -1px;
     left: -1px;
@@ -197,7 +197,7 @@
   }
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: -1px;
     right: -1px;
@@ -264,7 +264,7 @@
       display: flex;
 
       &::before {
-        content: '//';
+        content: "//";
         color: #4b5563;
         margin-right: 8px;
         font-weight: 400;
