--- a/web/libs/datamanager/src/components/Common/Pagination/Pagination.scss
+++ b/web/libs/datamanager/src/components/Common/Pagination/Pagination.scss
@@ -8,7 +8,7 @@
   height: var(--height);
   display: inline-flex;
   align-items: center;
-  font-family: ui-monospace, 'SF Mono', Consolas, monospace;
+  font-family: 'Space Grotesk', -apple-system, BlinkMacSystemFont, sans-serif;
 
   &_size {
     &_small {
