--- a/web/libs/datamanager/src/components/Filters/Filters.scss
+++ b/web/libs/datamanager/src/components/Filters/Filters.scss
@@ -3,6 +3,7 @@
   position: relative;
   border: 1px solid #1f2937;
   border-radius: 6px;
+  font-family: 'Space Grotesk', -apple-system, BlinkMacSystemFont, sans-serif;
 
   &:not(&_sidebar) {
     padding-top: 12px;
