--- a/web/apps/synapse/src/components/CreateOrganizationDialog/CreateOrganizationDialog.scss
+++ b/web/apps/synapse/src/components/CreateOrganizationDialog/CreateOrganizationDialog.scss
@@ -1,4 +1,5 @@
 .create-organization-dialog {
+  border: 1px solid var(--color-primary-border-subtle);
   &__content {
     padding: 20px 0;
   }
@@ -39,5 +40,6 @@
     padding-top: 20px;
     border-top: 1px solid var(--color-primary-border-subtle);
     margin-top: 24px;
+
   }
 }
