--- a/web/libs/datamanager/src/components/Common/Table/TableHead/TableHead.scss
+++ b/web/libs/datamanager/src/components/Common/Table/TableHead/TableHead.scss
@@ -13,6 +13,7 @@
   border-bottom: 1px solid #1f2937;
   color: #e8e4d9;
   position: sticky;
+  font-family: 'Space Grotesk', -apple-system, BlinkMacSystemFont, sans-serif;
 
   &__extra {
     flex: 1;
